[gd_scene load_steps=23 format=2]

[ext_resource path="res://5.png" type="Texture" id=1]
[ext_resource path="res://Line1.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-4.png" type="Texture" id=4]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-2.png" type="Texture" id=5]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-5.png" type="Texture" id=6]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-7.png" type="Texture" id=7]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-8.png" type="Texture" id=8]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-9.png" type="Texture" id=9]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-3.png" type="Texture" id=10]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-10.png" type="Texture" id=11]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-0.png" type="Texture" id=12]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-6.png" type="Texture" id=13]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-11.png" type="Texture" id=14]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-1.png" type="Texture" id=15]
[ext_resource path="res://Line2.gd" type="Script" id=16]
[ext_resource path="res://finger.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 145.703, 10.3108 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mouse:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 304, 670 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "tutam"
length = 3.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("mouse:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 1.65, 1.85, 2.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 0.01, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 670 ), Vector2( 860, 670 ), Vector2( 860, 670 ), Vector2( 304, 670 ), Vector2( 304, 670 ), Vector2( 304, 670 ), Vector2( 860, 670 ), Vector2( 860, 670 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.15, 1.6, 1.85, 1.95, 3, 3.45 ),
"transitions": PoolRealArray( 1.03526, 1.03526, 1, 1, 1.03526, 1.03526, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 1.85, 2.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 40, 40 ), Vector2( 40, 40 ), Vector2( 0, 40 ), Vector2( 0, 40 ), Vector2( 40, 40 ), Vector2( 40, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.15, 1.6, 1.85, 1.95, 3, 3.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.545098 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 827, 1169 )
z_index = -1
texture = ExtResource( 1 )

[node name="Line1" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 618 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="1S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1S"]
position = Vector2( 236, 623 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="1E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="1E"]
position = Vector2( 1429, 623 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="1M" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1M"]
position = Vector2( 832.5, 623 )
scale = Vector2( 4.43711, 4.91711 )
shape = SubResource( 2 )

[node name="Line2" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 853 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="2S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="2S"]
position = Vector2( 236, 854 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="2E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="2E"]
position = Vector2( 1429, 854 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="2M" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="2M"]
visible = false
polygon = PoolVector2Array( 214, 834, 232, 824, 254, 829, 314, 860, 378, 876, 437, 879, 505, 869, 657, 823, 742, 798, 860, 794, 978, 813, 1101, 863, 1176, 881, 1252, 878, 1395, 832, 1428, 822, 1449, 831, 1459, 844, 1458, 861, 1449, 875, 1439, 882, 1343, 914, 1268, 934, 1214, 938, 1172, 938, 1117, 930, 1048, 901, 961, 866, 896, 851, 831, 846, 759, 852, 694, 874, 619, 900, 528, 925, 441, 932, 371, 928, 315, 915, 241, 885, 212, 874, 205, 856 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="2M"]
polygon = PoolVector2Array( 194, 826, 212, 810, 236, 804, 259, 809, 276, 824, 303, 842, 369, 861, 454, 864, 539, 846, 626, 817, 729, 789, 821, 779, 925, 787, 1033, 825, 1133, 868, 1213, 874, 1317, 854, 1395, 815, 1427, 806, 1454, 811, 1471, 827, 1479, 849, 1475, 874, 1461, 892, 1444, 901, 1417, 903, 1346, 919, 1254, 941, 1199, 947, 1132, 941, 1096, 930, 943, 870, 845, 858, 756, 867, 613, 914, 545, 936, 449, 950, 360, 945, 270, 918, 211, 895, 188, 868, 188, 843 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 222.0
margin_top = 609.0
margin_right = 222.0
margin_bottom = 649.0
rect_scale = Vector2( 14.7271, 0.701673 )
color = Color( 1, 0, 0, 0 )

[node name="mouse" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 304, 670 )
rotation = 0.0961722
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 20 )

[node name="AP" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/tutam = SubResource( 7 )

[connection signal="mouse_entered" from="1S" to="." method="_on_1S_mouse_entered"]
[connection signal="mouse_exited" from="1S" to="." method="_on_1S_mouse_exited"]
[connection signal="mouse_entered" from="1E" to="." method="_on_1E_mouse_entered"]
[connection signal="mouse_exited" from="1E" to="." method="_on_1E_mouse_exited"]
[connection signal="mouse_entered" from="1M" to="." method="_on_1M_mouse_entered"]
[connection signal="mouse_exited" from="1M" to="." method="_on_1M_mouse_exited"]
[connection signal="mouse_entered" from="2S" to="." method="_on_2S_mouse_entered"]
[connection signal="mouse_exited" from="2S" to="." method="_on_2S_mouse_exited"]
[connection signal="mouse_entered" from="2E" to="." method="_on_2E_mouse_entered"]
[connection signal="mouse_exited" from="2E" to="." method="_on_2E_mouse_exited"]
[connection signal="mouse_entered" from="2M" to="." method="_on_2M_mouse_entered"]
[connection signal="mouse_exited" from="2M" to="." method="_on_2M_mouse_exited"]
